package data;
option optimize_for = SPEED;
option java_package = "server";
option java_outer_classname = "MonitorProtobuf";

message HeartBeat {
    required uint32 node_id = 1;
    repeated uint64 timestamp = 2;
}

message SocketAddress {
    required string hostname = 1;
    required uint32 port = 2;
}
